--- a/vercel.json
+++ b/vercel.json
@@ -10,10 +10,16 @@
         { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
         { "key": "X-Content-Type-Options", "value": "nosniff" },
         { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
+
+        /* ➜ NOWE: Permissions-Policy (wyłączamy zbędne uprawnienia przeglądarki) */
+        { "key": "Permissions-Policy", "value": "geolocation=(), camera=(), microphone=(), accelerometer=(), magnetometer=(), gyroscope=(), usb=(), payment=(), screen-wake-lock=(), interest-cohort=()" },
+
+        /* CSP – egzekwowane (enforcement) */
         {
           "key": "Content-Security-Policy",
           "value": "default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'self'; img-src 'self' https: data:; script-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; connect-src 'self' https://api.awonsystem.pl https://*.vercel-insights.com; report-uri /api/csp-report"
         },
+        /* CSP – report-only (logi kontrolne) */
         {
           "key": "Content-Security-Policy-Report-Only",
           "value": "default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'self'; img-src 'self' https: data:; script-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; connect-src 'self' https://api.awonsystem.pl https://*.vercel-insights.com; report-uri /api/csp-report"
