--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,18 @@
     { "source": "/robots.txt", "destination": "/api/robots.txt" }
   ],
   "headers": [
+    { "source": "/assets/(.*)", "headers": [
+      { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+    ]},
+    { "source": "/(.*\\.(?:css|js|svg|png|jpg|jpeg|gif|webp|ico|woff|woff2|ttf|eot|otf))", "headers": [
+      { "key": "Cache-Control", "value": "public, max-age=86400" }
+    ]},
+    { "source": "/(.*\\.html)", "headers": [
+      { "key": "Cache-Control", "value": "no-store" }
+    ]},
+    { "source": "/", "headers": [
+      { "key": "Cache-Control", "value": "no-store" }
+    ]},
     {
       "source": "/(.*)",
       "headers": [
