--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
   "version": 2,
   "rewrites": [
-    { "source": "/robots.txt", "destination": "/api/robots.txt" }
+    { "source": "/robots.txt", "destination": "/api/robots.txt" },
+    { "source": "/app/(.*)", "destination": "/index.html" }
   ],
   "headers": [
     { "source": "/assets/(.*)", "headers": [
@@ -24,9 +25,14 @@
         { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
         { "key": "Permissions-Policy", "value": "geolocation=(), camera=(), microphone=(), accelerometer=(), magnetometer=(), gyroscope=(), usb=(), payment=(), screen-wake-lock=(), interest-cohort=()" },
 
+        /* perf + security */
+        { "key": "X-DNS-Prefetch-Control", "value": "on" },
+        { "key": "Strict-Transport-Security", "value": "max-age=31536000; includeSubDomains" },
+        { "key": "Cross-Origin-Resource-Policy", "value": "same-origin" },
+
+        /* CSP (twarde, bez inline) */
         { "key": "Content-Security-Policy",
           "value": "default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'self'; img-src 'self' https: data:; script-src 'self'; style-src 'self'; font-src 'self' data:; connect-src 'self' https://api.awonsystem.pl https://*.vercel-insights.com; report-uri /api/csp-report" },
-
         { "key": "Content-Security-Policy-Report-Only",
           "value": "default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'self'; img-src 'self' https: data:; script-src 'self'; style-src 'self'; font-src 'self' data:; connect-src 'self' https://api.awonsystem.pl https://*.vercel-insights.com; report-uri /api/csp-report" }
       ]
