--- a/vercel.json
+++ b/vercel.json
@@ -17,25 +17,39 @@
     { "source": "/", "headers": [
       { "key": "Cache-Control", "value": "no-store" }
     ]},
-    {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
-        { "key": "X-Content-Type-Options", "value": "nosniff" },
-        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
-        { "key": "Permissions-Policy", "value": "geolocation=(), camera=(), microphone=(), accelerometer=(), magnetometer=(), gyroscope=(), usb=(), payment=(), screen-wake-lock=(), interest-cohort=()" },
 
-        /* perf + security */
-        { "key": "X-DNS-Prefetch-Control", "value": "on" },
-        { "key": "Strict-Transport-Security", "value": "max-age=31536000; includeSubDomains" },
-        { "key": "Cross-Origin-Resource-Policy", "value": "same-origin" },
+    { "source": "/health.html", "headers": [
+      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
+    ]},
+    { "source": "/version.html", "headers": [
+      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
+    ]},
+    { "source": "/select-test.html", "headers": [
+      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
+    ]},
+    { "source": "/smoke.html", "headers": [
+      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
+    ]},
+    { "source": "/log-test.html", "headers": [
+      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
+    ]},
+    { "source": "/error-test.html", "headers": [
+      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
+    ]},
+    { "source": "/env-dump.html", "headers": [
+      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
+    ]},
 
-        /* CSP (twarde, bez inline) */
-        { "key": "Content-Security-Policy",
-          "value": "default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'self'; img-src 'self' https: data:; script-src 'self'; style-src 'self'; font-src 'self' data:; connect-src 'self' https://api.awonsystem.pl https://*.vercel-insights.com; report-uri /api/csp-report" },
-        { "key": "Content-Security-Policy-Report-Only",
-          "value": "default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'self'; img-src 'self' https: data:; script-src 'self'; style-src 'self'; font-src 'self' data:; connect-src 'self' https://api.awonsystem.pl https://*.vercel-insights.com; report-uri /api/csp-report" }
-      ]
-    }
+    { "source": "/(.*)", "headers": [
+      { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
+      { "key": "X-Content-Type-Options", "value": "nosniff" },
+      { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" },
+      { "key": "Permissions-Policy", "value": "geolocation=(), camera=(), microphone=(), accelerometer=(), magnetometer=(), gyroscope=(), usb=(), payment=(), screen-wake-lock=(), interest-cohort=()" },
+      { "key": "X-DNS-Prefetch-Control", "value": "on" },
+      { "key": "Strict-Transport-Security", "value": "max-age=31536000; includeSubDomains" },
+      { "key": "Cross-Origin-Resource-Policy", "value": "same-origin" },
+      { "key": "Content-Security-Policy", "value": "default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'self'; img-src 'self' https: data:; script-src 'self'; style-src 'self'; font-src 'self' data:; connect-src 'self' https://api.awonsystem.pl https://*.vercel-insights.com; report-uri /api/csp-report" },
+      { "key": "Content-Security-Policy-Report-Only", "value": "default-src 'self'; base-uri 'self'; object-src 'none'; frame-ancestors 'self'; img-src 'self' https: data:; script-src 'self'; style-src 'self'; font-src 'self' data:; connect-src 'self' https://api.awonsystem.pl https://*.vercel-insights.com; report-uri /api/csp-report" }
+    ]}
   ]
 }
