--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
     { "source": "/app/(.*)", "destination": "/index.html" }
   ],
   "headers": [
+    { "source": "/manifest.webmanifest", "headers": [
+      { "key": "Content-Type", "value": "application/manifest+json; charset=utf-8" },
+      { "key": "Cache-Control", "value": "public, max-age=86400" }
+    ]},
     { "source": "/assets/(.*)", "headers": [
       { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
     ]},
@@ -17,29 +21,13 @@
     { "source": "/", "headers": [
       { "key": "Cache-Control", "value": "no-store" }
     ]},
-
-    { "source": "/health.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-    { "source": "/version.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-    { "source": "/select-test.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-    { "source": "/smoke.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-    { "source": "/log-test.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-    { "source": "/error-test.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-    { "source": "/env-dump.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-
+    { "source": "/health.html", "headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/version.html", "headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/select-test.html", "headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/smoke.html", "headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/log-test.html", "headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/error-test.html", "headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/env-dump.html", "headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
     { "source": "/(.*)", "headers": [
       { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
       { "key": "X-Content-Type-Options", "value": "nosniff" },
