pwa: PNG 192/512; seo: og.png; robots: noindex dla /brand.html

--- a/vercel.json
+++ b/vercel.json
@@ -22,30 +22,15 @@
       { "key": "Cache-Control", "value": "no-store" }
     ]},
 
-    { "source": "/thanks.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-    { "source": "/health.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-    { "source": "/version.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-    { "source": "/select-test.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-    { "source": "/smoke.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-    { "source": "/log-test.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-    { "source": "/error-test.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
-    { "source": "/env-dump.html", "headers": [
-      { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" }
-    ]},
+    { "source": "/thanks.html", "headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/brand.html",  "headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/health.html", "headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/version.html","headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/select-test.html","headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/smoke.html",  "headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/log-test.html","headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/error-test.html","headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
+    { "source": "/env-dump.html","headers": [ { "key": "X-Robots-Tag", "value": "noindex, nofollow, noarchive" } ] },
 
     { "source": "/(.*)", "headers": [
       { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
