--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@vercel/og": "^0.8.5",
     "lucide-react": "^0.463.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -18,11 +19,11 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.5",
-    "tailwindcss": "^3.4.10",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
-    "autoprefixer": "^10.4.20"
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.5"
   },
   "engines": {
     "node": "20.x"
